# Fintech--backend

./: ARCHITECTURE.md  README.md  requirements.txt
backend/: Makefile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: create_admin_tables.py  create_audit_logs.py  create_consent_tables.py  create_linked_accounts.py  create_notification_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/auth/: CD Workflow for FastAPI Backend.txt  __init__.py  dependencies.py  email.py  exceptions.py  hashing.py  jwt.py  service.py  utils.py
backend/app/core/: __init__.py  config.py  database.py  error_handler.py  exceptions.py  logging.py  middleware.py  security.py  settings.py
backend/app/crud/: __init__.py  user.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/email/: __init__.py  service.py
backend/app/mailer/: __init__.py  service.py
backend/app/middleware/: rate_limiter.py
backend/app/middlewares/: audit_context.py
backend/app/models/: __init__.py  audit_log.py  audit_mixin.py  consent.py  investment.py  linked_accounts.py  notification.py  payment.py  portfolio_rebalance.py  reconciliation.py  transaction.py  types.py  user.py  webhooks.py
backend/app/monitoring/: __init__.py  opentelemetry.py  prometheus.py
backend/app/redis/: __init__.py  client.py
backend/app/redis_new/: client.py
backend/app/routers/: linked_accounts.py
backend/app/schemas/: __init__.py  admin.py  audit_log.py  (+11 more)
backend/tests/: conftest.py
(+83 files in other folders)
